--- a/view-all.html
+++ b/view-all.html
@@ -44,7 +44,7 @@
 
     <script>
         // USE THE NEW SEPARATE API URL HERE
-        const DATA_API_URL = "YOUR_NEW_INVOICES_API_URL_HERE";
+        const DATA_API_URL = "https://script.google.com/macros/s/AKfycbzicV8zgKjlKKZuU_BxquJV0BfeotoNeMXivKtIPYO9oWRD_NMyG8oz35XKbaeKgNsPVQ/exec";
         const user = JSON.parse(localStorage.getItem("user"));
 
         window.onload = loadData;
