--- a/dashboard.html
+++ b/dashboard.html
@@ -133,7 +133,7 @@
     if (sectionId === 'create') {
         frame.src = "invoice-form.html";
     } else if (sectionId === 'view-all') {
-        frame.src = "view-invoices.html";
+        frame.src = "view-all.html";
     } else {
         alert("Section: " + sectionId + " is under development.");
     }
