--- a/invoice-form.html
+++ b/invoice-form.html
@@ -150,6 +150,7 @@ window.onload = async () => {
         invoiceId: invId,
         userId: user.id,
         clientName: client,
+        clientPhone: phone,
         date: document.getElementById("display-date").innerText,
         total: document.getElementById("grand-total").innerText,
         items: items
