--- a/update.html
+++ b/update.html
@@ -58,7 +58,7 @@
 </div>
 
 <script>
-    const API_URL = "YOUR_INVOICES_API_URL_HERE";
+    const API_URL = "https://script.google.com/macros/s/AKfycbxrMfaDwpChTBu83fGnkm7g_0vwZMyA8FLaSPcXf1iddjIJ7JnUjHBp7Togg4G3yGPv/exec";
     const user = JSON.parse(localStorage.getItem("user"));
     let allData = [];
     let currentEditingId = "";
