--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
             <li onclick="showSection('create')">➕ Create Invoice</li>
             <li onclick="showSection('find')">🔍 Find Invoice</li>
             <li onclick="showSection('view-all')">📄 View All Invoices</li>
-            <li onclick="showSection('print')">🖨️ Print Duplicate</li>
+            <li onclick="showSection('update')">✏️ Edit or Delete</li>
         </ul>
     </aside>
 
