--- a/reports.html
+++ b/reports.html
@@ -71,7 +71,7 @@
 </div>
 
 <script>
-    const API_URL = "YOUR_INVOICES_API_URL_HERE";
+    const API_URL = "https://script.google.com/macros/s/AKfycbwKgib802NVM4Mn31in9KhfoMHPA9b2tubCMLq7lDrCmthRNyryOiPaAT5FBrnL_qto/exec";
     const user = JSON.parse(localStorage.getItem("user"));
     let allData = [];
 
