--- a/reports.html
+++ b/reports.html
@@ -68,7 +68,7 @@
 
 <script>
     // 1. UPDATE THIS URL WITH YOUR DEPLOYED GAS URL
-    const API_URL = "YOUR_GAS_REPORT_URL_HERE";
+    const API_URL = "https://script.google.com/macros/library/d/1OmKrHL67L9fk-49l1wi6JjXrNe4M8npy867gl0no9fGpxoYTwhu7raxz/2";
     const user = JSON.parse(localStorage.getItem("user"));
 
     window.onload = () => {
