--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <input type="password" id="s_pass" placeholder="Password">
         <input type="text" id="s_phone" placeholder="Phone">
         <input type="text" id="s_biz" placeholder="Business Name">
+        <label style="font-size: 12px; color: #666;">Upload Business Logo</label>
+<input type="file" id="s_logo" accept="image/*" onchange="previewLogo(this)">
+<div id="logoPreview" style="margin: 5px 0; text-align: center;"></div>
         <button onclick="doSignup()">Create Account</button>
         <div class="toggle" onclick="toggleForm()">Back to Login</div>
     </div>
