--- a/invoice-form.html
+++ b/invoice-form.html
@@ -75,7 +75,7 @@
     <button class="btn-gen" onclick="submitInvoice()">Generate & Save Invoice</button>
 
     <script>
-        const API_URL = "YOUR_NEW_DEPLOYMENT_URL";
+        const API_URL = "https://script.google.com/macros/s/AKfycbwKgib802NVM4Mn31in9KhfoMHPA9b2tubCMLq7lDrCmthRNyryOiPaAT5FBrnL_qto/exec";
         const user = JSON.parse(localStorage.getItem("user"));
         let taxPercent = 0;
 
