--- a/view-all.html
+++ b/view-all.html
@@ -95,66 +95,78 @@
             }
         }
 
-        async function handleShare(id, platform) {
-            const { jsPDF } = window.jspdf;
-            const inv = cachedInvoices.find(i => i.invoiceId === id);
-            if (!inv) return;
+     async function handleShare(id, platform) {
+    const { jsPDF } = window.jspdf;
+    const inv = cachedInvoices.find(i => i.invoiceId === id);
+    if (!inv) return;
 
-            const items = JSON.parse(inv.items);
-            let itemText = "";
-            items.forEach(item => {
-                itemText += `• ${item.description} (Qty: ${item.qty} x ${item.price}) = ${parseFloat(item.amount).toFixed(2)}\n`;
-            });
+    // --- 1. DATA PREP ---
+    const items = JSON.parse(inv.items);
+    let itemText = "";
+    items.forEach(item => {
+        itemText += `• ${item.description} (Qty: ${item.qty} x ${item.price}) = ${parseFloat(item.amount).toFixed(2)}\n`;
+    });
 
-            const fullMessage = `📄 *INVOICE: ${inv.invoiceId}*\n` +
-                                `📅 Date: ${inv.date}\n` +
-                                `👤 Client: ${inv.clientName}\n\n` +
-                                `*Items:*\n${itemText}\n` +
-                                `────────────────\n` +
-                                `Sub-total: ${parseFloat(inv.subtotal).toFixed(2)}\n` +
-                                `Tax: ${parseFloat(inv.taxAmount).toFixed(2)}\n` +
-                                `💰 *Total: ${parseFloat(inv.total).toFixed(2)}*\n\n` +
-                                `Regards, *${user.business}*`;
+    const fullMessage = `📄 *INVOICE: ${inv.invoiceId}*\n` +
+                        `📅 Date: ${inv.date}\n` +
+                        `👤 Client: ${inv.clientName}\n\n` +
+                        `*Items:*\n${itemText}\n` +
+                        `────────────────\n` +
+                        `Sub-total: ${parseFloat(inv.subtotal).toFixed(2)}\n` +
+                        `Tax: ${parseFloat(inv.taxAmount).toFixed(2)}\n` +
+                        `💰 *Total: ${parseFloat(inv.total).toFixed(2)}*\n\n` +
+                        `Regards, *${user.business}*`;
 
-            // --- 1. GENERATE PDF ---
-            const doc = new jsPDF();
-            doc.setFontSize(20);
-            doc.text(user.business, 14, 22);
-            doc.setFontSize(10);
-            doc.text(`Invoice ID: ${inv.invoiceId}`, 14, 30);
-            doc.text(`Date: ${inv.date}`, 14, 35);
-            doc.text(`Client: ${inv.clientName}`, 14, 45);
+    // --- 2. EXECUTE WHATSAPP / MAIL LINK ---
+    const encodedMsg = encodeURIComponent(fullMessage);
+    if (platform === 'wa') {
+        // FIX: Force to string and check for null to prevent .replace() errors
+        const rawPhone = String(inv.clientPhone || "");
+        const cleanPhone = rawPhone.replace(/\D/g, ''); 
+        window.open(`https://wa.me/${cleanPhone}?text=${encodedMsg}`, '_blank');
+    } else {
+        window.location.href = `mailto:?subject=Invoice ${inv.invoiceId}&body=${encodedMsg}`;
+    }
 
-            const tableData = items.map(item => [item.description, item.qty, item.price, parseFloat(item.amount).toFixed(2)]);
-            doc.autoTable({ startY: 55, head: [['Description', 'Qty', 'Price', 'Amount']], body: tableData });
-            
-            let finalY = doc.lastAutoTable.finalY + 10;
-            doc.text(`Sub-total: ${parseFloat(inv.subtotal).toFixed(2)}`, 140, finalY);
-            doc.text(`Tax: ${parseFloat(inv.taxAmount).toFixed(2)}`, 140, finalY + 5);
-            doc.text(`Total: ${parseFloat(inv.total).toFixed(2)}`, 140, finalY + 12);
+    // --- 3. GENERATE PDF ---
+    const doc = new jsPDF();
+    doc.setFontSize(20);
+    doc.text(user.business, 14, 22);
+    doc.setFontSize(10);
+    doc.text(`Invoice ID: ${inv.invoiceId}`, 14, 30);
+    doc.text(`Date: ${inv.date}`, 14, 35);
+    doc.text(`Client: ${inv.clientName}`, 14, 45);
 
-            // --- 2. EXECUTE WHATSAPP / MAIL LINK ---
-            const encodedMsg = encodeURIComponent(fullMessage);
-            if (platform === 'wa') {
-                const cleanPhone = inv.clientPhone ? inv.clientPhone.replace(/\D/g,'') : "";
-                window.open(`https://wa.me/${cleanPhone}?text=${encodedMsg}`, '_blank');
-            } else {
-                window.location.href = `mailto:?subject=Invoice ${inv.invoiceId}&body=${encodedMsg}`;
-            }
+    const tableData = items.map(item => [
+        item.description, 
+        item.qty, 
+        item.price, 
+        parseFloat(item.amount).toFixed(2)
+    ]);
 
-            // --- 3. DOWNLOAD/SHARE PDF (Always Triggered After Link) ---
-            const pdfBlob = doc.output('blob');
-            const file = new File([pdfBlob], `${inv.invoiceId}.pdf`, { type: 'application/pdf' });
+    doc.autoTable({ 
+        startY: 55, 
+        head: [['Description', 'Qty', 'Price', 'Amount']], 
+        body: tableData 
+    });
+    
+    let finalY = doc.lastAutoTable.finalY + 10;
+    doc.text(`Sub-total: ${parseFloat(inv.subtotal).toFixed(2)}`, 140, finalY);
+    doc.text(`Tax: ${parseFloat(inv.taxAmount).toFixed(2)}`, 140, finalY + 5);
+    doc.text(`Total: ${parseFloat(inv.total).toFixed(2)}`, 140, finalY + 12);
 
-            if (navigator.canShare && navigator.canShare({ files: [file] })) {
-                try {
-                    await navigator.share({ files: [file], title: `Invoice ${inv.invoiceId}` });
-                } catch (err) { console.log("Native share cancelled"); }
-            } else {
-                doc.save(`${inv.invoiceId}.pdf`);
-            }
-        }
+    // --- 4. DOWNLOAD/SHARE PDF ---
+    const pdfBlob = doc.output('blob');
+    const file = new File([pdfBlob], `${inv.invoiceId}.pdf`, { type: 'application/pdf' });
 
+    if (navigator.canShare && navigator.canShare({ files: [file] })) {
+        try {
+            await navigator.share({ files: [file], title: `Invoice ${inv.invoiceId}` });
+        } catch (err) { console.log("Native share cancelled"); }
+    } else {
+        doc.save(`${inv.invoiceId}.pdf`);
+    }
+}
         function filterTable() {
             const input = document.getElementById("searchBox").value.toUpperCase();
             document.querySelectorAll("#tableBody tr").forEach(row => {
